src/main/java/org/alex/example/fitnessmanagement/error/NotFoundByEmailException.java
package org.alex.example.fitnessmanagement.error;

public class NotFoundByEmailException extends BusinessFitnessException {
    public NotFoundByEmailException(String message) {
        super(message);
    }
}
